--- a/index.html
+++ b/index.html
@@ -2,12 +2,45 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name='viewport'
+      content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' >
+
   <title>Calculator</title>
+
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 
   <link href="css/reset.css" rel="stylesheet" type="text/css" media="all"/>
   <link href="css/styles.css" rel="stylesheet" type="text/css" media="all"/>
 </head>
 <body>
-  
+  <main id="calc-body">
+    <div id="result-area">
+      <div id="equation"></div>
+      <div id="output"></div>
+    </div>
+    <div id="button-grid">
+      <div class="button" data-value="(">(</div>
+      <div class="button" data-value=")">)</div>
+      <div class="button" data-value="%">%</div>
+      <div class="button" data-value="AC/CE">AC</div>
+      <div class="button" data-value="7">7</div>
+      <div class="button" data-value="8">8</div>
+      <div class="button" data-value="9">9</div>
+      <div class="button" data-value="÷">÷</div>
+      <div class="button" data-value="4">4</div>
+      <div class="button" data-value="5">5</div>
+      <div class="button" data-value="6">6</div>
+      <div class="button" data-value="x">x</div>
+      <div class="button" data-value="1">1</div>
+      <div class="button" data-value="2">2</div>
+      <div class="button" data-value="3">3</div>
+      <div class="button" data-value="-">-</div>
+      <div class="button" data-value="0">0</div>
+      <div class="button" data-value=".">.</div>
+      <div class="button" data-value="=">=</div>
+      <div class="button" data-value="+">+</div>
+    </div>
+  </main>
 </body>
 </html>
