--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Calculator</title>
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
 
   <link href="css/reset.css" rel="stylesheet" type="text/css" media="all"/>
   <link href="css/styles.css" rel="stylesheet" type="text/css" media="all"/>
