Disable/enable decimal btn appropriately

--- a/index.html
+++ b/index.html
@@ -20,26 +20,26 @@
       <div id="output"></div>
     </div>
     <div id="button-grid">
-      <div class="button-item bracket" data-value="(">(</div>
-      <div class="button-item bracket" data-value=")">)</div>
-      <div class="button-item operator" data-value="%">%</div>
-      <div class="button-item clear" data-value="AC">AC</div>
-      <div class="button-item number" data-value="7">7</div>
-      <div class="button-item number" data-value="8">8</div>
-      <div class="button-item number" data-value="9">9</div>
-      <div class="button-item operator" data-value="÷">÷</div>
-      <div class="button-item number" data-value="4">4</div>
-      <div class="button-item number" data-value="5">5</div>
-      <div class="button-item number" data-value="6">6</div>
-      <div class="button-item operator" data-value="x">x</div>
-      <div class="button-item number" data-value="1">1</div>
-      <div class="button-item number" data-value="2">2</div>
-      <div class="button-item number" data-value="3">3</div>
-      <div class="button-item operator" data-value="-">-</div>
-      <div class="button-item number" data-value="0">0</div>
-      <div class="button-item decimal" data-value=".">.</div>
-      <div class="button-item equal" data-value="=">=</div>
-      <div class="button-item operator" data-value="+">+</div>
+      <button class="button-item bracket" data-value="(">(</button>
+      <button class="button-item bracket" data-value=")">)</button>
+      <button class="button-item operator" data-value="%">%</button>
+      <button class="button-item clear" data-value="AC">AC</button>
+      <button class="button-item number" data-value="7">7</button>
+      <button class="button-item number" data-value="8">8</button>
+      <button class="button-item number" data-value="9">9</button>
+      <button class="button-item operator" data-value="÷">÷</button>
+      <button class="button-item number" data-value="4">4</button>
+      <button class="button-item number" data-value="5">5</button>
+      <button class="button-item number" data-value="6">6</button>
+      <button class="button-item operator" data-value="x">x</button>
+      <button class="button-item number" data-value="1">1</button>
+      <button class="button-item number" data-value="2">2</button>
+      <button class="button-item number" data-value="3">3</button>
+      <button class="button-item operator" data-value="-">-</button>
+      <button class="button-item number" data-value="0">0</button>
+      <button class="button-item decimal" data-value=".">.</button>
+      <button class="button-item equal" data-value="=">=</button>
+      <button class="button-item operator" data-value="+">+</button>
     </div>
   </main>
 
