--- a/index.html
+++ b/index.html
@@ -20,26 +20,26 @@
       <div id="output"></div>
     </div>
     <div id="button-grid">
-      <button class="button-item bracket" data-value="(">(</button>
-      <button class="button-item bracket" data-value=")">)</button>
-      <button class="button-item operator" data-value="%">%</button>
-      <button class="button-item clear" data-value="Escape">AC</button>
-      <button class="button-item number" data-value="7">7</button>
-      <button class="button-item number" data-value="8">8</button>
-      <button class="button-item number" data-value="9">9</button>
-      <button class="button-item operator" data-value="/">/</button>
-      <button class="button-item number" data-value="4">4</button>
-      <button class="button-item number" data-value="5">5</button>
-      <button class="button-item number" data-value="6">6</button>
-      <button class="button-item operator" data-value="*">x</button>
-      <button class="button-item number" data-value="1">1</button>
-      <button class="button-item number" data-value="2">2</button>
-      <button class="button-item number" data-value="3">3</button>
-      <button class="button-item operator" data-value="-">-</button>
-      <button class="button-item number" data-value="0">0</button>
-      <button class="button-item decimal" data-value=".">.</button>
-      <button class="button-item equal" data-value="Enter">=</button>
-      <button class="button-item operator" data-value="+">+</button>
+      <button class="button-item operator unary" data-value="negation" data-key="">+/-</button>
+      <button class="button-item operator unary" data-value="sqrt" data-key="">&Sqrt;</button>
+      <button class="button-item operator unary" data-value="%" data-key="%">%</button>
+      <button class="button-item clear" data-value="clear" data-key="Escape">AC</button>
+      <button class="button-item number" data-value="7" data-key="7">7</button>
+      <button class="button-item number" data-value="8" data-key="8">8</button>
+      <button class="button-item number" data-value="9" data-key="9">9</button>
+      <button class="button-item operator" data-value="/" data-key="/">/</button>
+      <button class="button-item number" data-value="4" data-key="4">4</button>
+      <button class="button-item number" data-value="5" data-key="5">5</button>
+      <button class="button-item number" data-value="6" data-key="6">6</button>
+      <button class="button-item operator" data-value="*" data-key="*">x</button>
+      <button class="button-item number" data-value="1" data-key="1">1</button>
+      <button class="button-item number" data-value="2" data-key="2">2</button>
+      <button class="button-item number" data-value="3" data-key="3">3</button>
+      <button class="button-item operator" data-value="-" data-key="-">-</button>
+      <button class="button-item number" data-value="0" data-key="0">0</button>
+      <button class="button-item decimal" data-value="." data-key=".">.</button>
+      <button class="button-item equal" data-value="=" data-key="Enter">=</button>
+      <button class="button-item operator" data-value="+" data-key="+">+</button>
     </div>
   </main>
 
